[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/keh_gddb/editor/dbemain.gd" type="Script" id=1]
[ext_resource path="res://addons/keh_gddb/editor/dlg_newtable.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/keh_gddb/editor/table_list.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/keh_gddb/editor/dlg_newcolumn.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/keh_gddb/editor/dlg_rnametbl.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/keh_gddb/editor/dlg_dbinfo.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/keh_gddb/editor/dlg_confirm.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=6]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.101961, 0.117647, 0.152941, 1 )

[sub_resource type="StyleBoxEmpty" id=8]
content_margin_left = 15.0
content_margin_right = 35.0
content_margin_top = 15.0
content_margin_bottom = 15.0

[sub_resource type="Image" id=11]
data = {
"data": PoolByteArray( 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42 ),
"format": "RGB8",
"height": 8,
"mipmaps": false,
"width": 8
}

[sub_resource type="ImageTexture" id=5]
flags = 4
flags = 4
image = SubResource( 11 )
size = Vector2( 8, 8 )

[sub_resource type="StyleBoxTexture" id=10]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 8, 8 )

[node name="dbemain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_container" type="PanelContainer" parent="vbox"]
margin_right = 1024.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 6 )

[node name="hbox_tbar" type="HBoxContainer" parent="vbox/top_container"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1009.0
margin_bottom = 35.0

[node name="bt_dbinfo" type="Button" parent="vbox/top_container/hbox_tbar"]
margin_right = 95.0
margin_bottom = 20.0
hint_tooltip = "Display database information"
focus_mode = 0
disabled = true
enabled_focus_mode = 0
text = "Database file"

[node name="lbl_dbres" type="Label" parent="vbox/top_container/hbox_tbar"]
margin_left = 99.0
margin_top = 2.0
margin_right = 840.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 7 )

[node name="bt_openclose" type="Button" parent="vbox/top_container/hbox_tbar"]
margin_left = 844.0
margin_right = 914.0
margin_bottom = 20.0
text = "Open DB"

[node name="bt_create" type="Button" parent="vbox/top_container/hbox_tbar"]
margin_left = 918.0
margin_right = 994.0
margin_bottom = 20.0
text = "Create DB"

[node name="main_container" type="PanelContainer" parent="vbox"]
margin_top = 45.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )

[node name="hsplit" type="HSplitContainer" parent="vbox/main_container"]
margin_left = 15.0
margin_top = 15.0
margin_right = 989.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbleft" type="VBoxContainer" parent="vbox/main_container/hsplit"]
margin_right = 200.0
margin_bottom = 525.0
rect_min_size = Vector2( 200, 0 )

[node name="boxbuttons" type="HBoxContainer" parent="vbox/main_container/hsplit/vbleft"]
margin_right = 200.0
margin_bottom = 20.0

[node name="lbl_tables" type="Label" parent="vbox/main_container/hsplit/vbleft/boxbuttons"]
margin_top = 3.0
margin_right = 176.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Tables"

[node name="bt_addtable" type="Button" parent="vbox/main_container/hsplit/vbleft/boxbuttons"]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 20.0
disabled = true
text = "+"

[node name="scrollc" type="ScrollContainer" parent="vbox/main_container/hsplit/vbleft"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 10 )

[node name="table_list" parent="vbox/main_container/hsplit/vbleft/scrollc" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 499.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbright" type="VBoxContainer" parent="vbox/main_container/hsplit"]
margin_left = 212.0
margin_right = 974.0
margin_bottom = 525.0

[node name="boxbuttons" type="HBoxContainer" parent="vbox/main_container/hsplit/vbright"]
margin_right = 762.0
margin_bottom = 20.0

[node name="lbl_tblname" type="Label" parent="vbox/main_container/hsplit/vbright/boxbuttons"]
margin_top = 3.0
margin_right = 601.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="bt_addcolumn" type="Button" parent="vbox/main_container/hsplit/vbright/boxbuttons"]
margin_left = 605.0
margin_right = 694.0
margin_bottom = 20.0
disabled = true
text = "Add column"

[node name="bt_addrow" type="Button" parent="vbox/main_container/hsplit/vbright/boxbuttons"]
margin_left = 698.0
margin_right = 762.0
margin_bottom = 20.0
disabled = true
text = "Add row"

[node name="dialogs" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dlg_newtable" parent="dialogs" instance=ExtResource( 2 )]

[node name="dlg_newcolumn" parent="dialogs" instance=ExtResource( 5 )]
margin_bottom = 86.0

[node name="dlg_ocdb" type="FileDialog" parent="dialogs"]
margin_right = 600.0
margin_bottom = 340.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.tres", "*.res" )
current_dir = "/Dev/Godot/KehAddons/project3.2"
current_path = "/Dev/Godot/KehAddons/project3.2/"

[node name="dlg_rnametbl" parent="dialogs" instance=ExtResource( 6 )]

[node name="dlg_dbinfo" parent="dialogs" instance=ExtResource( 7 )]
margin_right = 461.0
margin_bottom = 282.0

[node name="dlg_confirm" parent="dialogs" instance=ExtResource( 8 )]

[node name="dlg_message" type="AcceptDialog" parent="dialogs"]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
[connection signal="pressed" from="vbox/top_container/hbox_tbar/bt_dbinfo" to="." method="_on_bt_dbinfo_pressed"]
[connection signal="pressed" from="vbox/top_container/hbox_tbar/bt_openclose" to="." method="_on_bt_openclose_pressed"]
[connection signal="pressed" from="vbox/top_container/hbox_tbar/bt_create" to="." method="_on_bt_create_pressed"]
[connection signal="dragged" from="vbox/main_container/hsplit" to="." method="_on_hsplit_dragged"]
[connection signal="pressed" from="vbox/main_container/hsplit/vbleft/boxbuttons/bt_addtable" to="." method="_on_bt_addtable_pressed"]
[connection signal="table_resource_dropped" from="vbox/main_container/hsplit/vbleft/scrollc/table_list" to="." method="_on_table_list_table_resource_dropped"]
[connection signal="pressed" from="vbox/main_container/hsplit/vbright/boxbuttons/bt_addcolumn" to="." method="_on_bt_addcolumn_pressed"]
[connection signal="pressed" from="vbox/main_container/hsplit/vbright/boxbuttons/bt_addrow" to="." method="_on_bt_addrow_pressed"]
[connection signal="ok_pressed" from="dialogs/dlg_newtable" to="." method="_on_dlg_newtable_ok_pressed"]
[connection signal="ok_pressed" from="dialogs/dlg_newcolumn" to="." method="_on_dlg_newcolumn_ok_pressed"]
[connection signal="file_selected" from="dialogs/dlg_ocdb" to="." method="_on_dlg_ocdb_file_selected"]
[connection signal="ok_pressed" from="dialogs/dlg_rnametbl" to="." method="_on_dlg_rnametbl_ok_pressed"]
[connection signal="confirmed" from="dialogs/dlg_confirm" to="." method="_on_dialog_confirmed"]
